Add front matter to all product posts

--- a/content/posts/2025-09-01-1725-auto-post.md
+++ b/content/posts/2025-09-01-1725-auto-post.md
@@ -1,3 +1,9 @@
++++
+title = "Untitled Product"
+date = 2025-09-04
+draft = false
++++
+
 ---
 title: "Solar Savings for Every Budget"
 date: 2025-09-01T17:25:12+00:00
