--- a/content/posts/b0716jv1sg.md
+++ b/content/posts/b0716jv1sg.md
@@ -1,3 +1,9 @@
++++
+title = "LuminAID PackLite Max Solar Inflatable Lantern"
+date = 2025-09-04
+draft = false
++++
+
 ---
 title: "LuminAID PackLite Max Solar Inflatable Lantern"
 date: 2025-09-04T22:29:50.845225
