--- a/content/posts/b09w2cft61.md
+++ b/content/posts/b09w2cft61.md
@@ -1,3 +1,9 @@
++++
+title = "ALLPOWERS SP033 200W Portable Solar Panel"
+date = 2025-09-04
+draft = false
++++
+
 ---
 title: "ALLPOWERS SP033 200W Portable Solar Panel"
 date: 2025-09-04T22:31:23.304057
