--- a/content/posts/b001qc78qk.md
+++ b/content/posts/b001qc78qk.md
@@ -1,3 +1,9 @@
++++
+title = "Product B001QC78QK"
+date = 2025-09-04
+draft = false
++++
+
 ---
 title: "Primus Micron Lantern with Piezo Ignition"
 date: 2025-09-04T22:34:51.584111
