--- a/content/posts/b09nql39x5.md
+++ b/content/posts/b09nql39x5.md
@@ -1,3 +1,9 @@
++++
+title = "Black Diamond Moji Lantern"
+date = 2025-09-04
+draft = false
++++
+
 ---
 title: "Black Diamond Moji Lantern"
 date: 2025-09-04T22:30:11.227283
