--- a/content/posts/b0b7ky3d15.md
+++ b/content/posts/b0b7ky3d15.md
@@ -1,3 +1,9 @@
++++
+title = "Product B0B7KY3D15"
+date = 2025-09-04
+draft = false
++++
+
 ---
 title: "Portable 100W Solar Panel Foldable"
 date: 2025-09-04T22:32:05.319986
